[gd_scene load_steps=2 format=2]

[ext_resource path="res://GetTraining.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_left = 320.0
margin_top = 80.0
margin_right = 728.0
margin_bottom = 547.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLabel" type="Label" parent="Panel"]
anchor_right = 0.083
anchor_bottom = 0.031
margin_left = 119.964
margin_top = 191.964
margin_right = 230.092
margin_bottom = 201.076
text = "Select the difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestLabel" type="Label" parent="Panel"]
anchor_right = 0.083
anchor_bottom = 0.031
margin_left = 127.982
margin_top = 114.637
margin_right = 219.11
margin_bottom = 123.749
text = "Select the test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestSelection" type="OptionButton" parent="Panel"]
margin_left = 136.0
margin_top = 144.0
margin_right = 248.0
margin_bottom = 168.0
text = "AIME"
items = [ "AIME", null, false, 0, null, "AMC8", null, false, 1, null, "AMC10", null, false, 2, null, "AMC12", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultySelection" type="OptionButton" parent="Panel"]
margin_left = 130.655
margin_top = 220.436
margin_right = 257.655
margin_bottom = 249.436
text = "Easy"
items = [ "Easy", null, false, 0, null, "Medium", null, false, 1, null, "Hard", null, false, 2, null, "Very Hard", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainingLabel" type="Label" parent="Panel"]
margin_left = 107.527
margin_top = 21.2911
margin_right = 273.527
margin_bottom = 96.2911
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Select your training:
Pick a test first,
then pick the difficulty"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DDLabel" type="Label" parent="Panel"]
margin_left = 47.0547
margin_top = 296.891
margin_right = 375.055
margin_bottom = 449.891
text = "For the AIME Test, the difficulties represent:

Easy = Problems 1 to 5
Medium = Problems 6 to 10
Hard = Problems 11 to 13
Very Hard = Problems 14 to 15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetTraining" type="Button" parent="Panel"]
margin_left = 136.873
margin_top = 261.327
margin_right = 242.873
margin_bottom = 290.327
text = "Get training!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmTraining" type="ConfirmationDialog" parent="Panel"]
margin_left = 96.0
margin_top = 192.0
margin_right = 296.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Panel/TestSelection" to="Panel" method="_on_TestSelection_item_selected"]
[connection signal="pressed" from="Panel/GetTraining" to="Panel" method="_on_GetTraining_pressed"]
[connection signal="confirmed" from="Panel/ConfirmTraining" to="Panel" method="_on_ConfirmTraining_confirmed"]
